# hltv-scraper

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  r2_publish.py  requirements-lock.txt  requirements.txt  snapshot.py
.github/workflows/: ci.yml
core/: browser.py  checkpoint.py  exporter.py  rate_limiter.py
db/: database.py  schema.sql
scrapers/: base.py  event_detail.py  events.py  match_detail.py  match_stats.py  matches.py  news.py  player_rankings.py  player_stats.py  players.py  rankings.py  roster_history.py  team_stats.py  teams.py
tests/: test_base_parsers.py  test_checkpoint_atomic.py  test_smoke.py
