[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hltv-scraper"
version = "0.1.0"
description = "Production-grade structural data extraction and pipeline architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "camoufox",
    "cloakbrowser",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
hltv-scraper = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]
