[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hltv-scraper"
version = "0.1.0"
description = "Production-grade structural data extraction and pipeline architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "camoufox",
    "cloakbrowser",
    "playwright",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "lxml>=5.4.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
hltv-scraper = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]
