[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hltv-scraper"
version = "0.1.0"
description = "Async HLTV.org scraper for CS2 esports matches, players, teams, events, and rankings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "ark-daemon" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "camoufox",
    "cloakbrowser",
    "playwright",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "lxml>=5.4.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
publish = [
    "boto3>=1.34.0",
]

[project.scripts]
hltv-scraper = "main:main"

[project.urls]
Homepage = "https://github.com/ark-daemon/hltv-scraper"
Repository = "https://github.com/ark-daemon/hltv-scraper"

[tool.setuptools]
py-modules = ["main", "config", "cli_ui", "snapshot", "snapshot_io", "r2_publish"]
packages = ["core", "db", "scrapers"]

[tool.setuptools.package-data]
db = ["schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
